--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -19,5 +19,8 @@
 <!-- RabbitMQ Elements -->
 <link rel="import" href="rabbitmq/rabbitmq-elements.html">
 
+<!-- WCS Elements -->
+<link rel="import" href="wcs/wcs-elements.html">
+
 <!-- Theme Elements -->
 <link rel="import" href="theme/theme-elements.html">
