--- a/app/elements/logis/anythings-sku.html
+++ b/app/elements/logis/anythings-sku.html
@@ -33,11 +33,11 @@ Copyright © HatioLab Inc. All rights reserved.
 
     <things-search-form id="search-form" title="[[menuInfo.title]]" form-fields="[[searchFormFields]]"
       select-fields="[[selectFields]]" sort-fields="[[sortFields]]" action-url="[[menuInfo.resource_url]]"
-      page="{{page}}" limit="[[limit]]" last-response="{{lastResponse}}">
+      page="{{page}}" limit="{{limit}}" last-response="{{lastResponse}}">
     </things-search-form>
 
     <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[gridColumns]]"
-      data="[[lastResponse.items]]" total-count="[[itemCount]]" current-page="{{page}}" limit="[[limit]]"
+      data="[[lastResponse.items]]" total-count="[[itemCount]]" current-page="{{page}}" limit="{{limit}}"
       fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]"
       buttons="[[buttons]]">
     </things-resource-grid>
@@ -65,7 +65,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _receiveBtnTapped: function(event) {
+      _receiveBtnTapped: function (event) {
         var comCd = this._checkForReceive();
         if (comCd) {
           this._readyToReceive(event, comCd);
@@ -78,7 +78,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} event
        * @param {String} comCd
        */
-      _readyToReceive: function(event, comCd) {
+      _readyToReceive: function (event, comCd) {
         var title = Things.DataGlobal.t(event.detail.text);
         var ajax = this.$['ready-to-receive-sku-ajax'];
         ajax.resourceId = comCd;
@@ -89,7 +89,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * 수신을 위한 체크
        *******************
        */
-      _checkForReceive: function() {
+      _checkForReceive: function () {
         var searchFormData = this.$['search-form'].serializeMyForm();
         var comCd = searchFormData.com_cd;
 
@@ -113,7 +113,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _receiveSku: function(event) {
+      _receiveSku: function (event) {
         this._realReceiveSku(event);
       },
 
@@ -122,7 +122,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _realReceiveSku: function(event) {
+      _realReceiveSku: function (event) {
         var comCd = event.detail.com_cd;
         var skuCount = event.detail.sku_count;
         var bcrCount = event.detail.barcd_count;
@@ -160,7 +160,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: text,
             showCancelButton: true,
             closeOnConfirm: false
-          }, function() {
+          }, function () {
             this.openConfirmMsg({
               type: 'info',
               title: title,
@@ -178,7 +178,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _endReceivingSku: function(event) {
+      _endReceivingSku: function (event) {
         var text = Things.DataGlobal.t('text.Success to Process');
         this.openInfoMsg({
           type: 'info',
@@ -192,7 +192,7 @@ Copyright © HatioLab Inc. All rights reserved.
        ******************
        * @param {Object} event
        */
-      _showBarcode: function(event) {
+      _showBarcode: function (event) {
         var checkedSkuRow = this._getCheckedRow();
         if (!checkedSkuRow) return;
 
@@ -228,7 +228,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @description 체크한 그리드의 로우 오브젝트를 리턴함
        * 하나의 로우만 체크해야하며 복수 혹은 체크하지 않을 경우 팝업 출력
        */
-      _getCheckedRow: function() {
+      _getCheckedRow: function () {
         var gridObj = this.$['grid'].getGridObject();
         var checkedRows = gridObj.getCheckedRows();
 
